--- a/index.html
+++ b/index.html
@@ -54,50 +54,22 @@
 	<script src="js/aforo.js"></script>
 	<script src="js/scratch.js"></script>
 	
-	<!--funcion para saber si ya esta logado-->
-	<script>
-	
-     
- 
-    window.onload = function() { 
-		var fechareatest = new Date(test.timestamp);
-		formateofecha(fechareatest);
-
-    }; 
-  
-	
-	</script>
-	
 	
 </head>
 
 <body data-theme="b">
 
 	<!--INICIO-->
-<div data-role="page" id="login">
-		<div data-role="header" data-theme="b">Mis deberes: Login</div>
+<!-- <div data-role="page" id="login">
 			<div data-role="content" data-theme="b">
-	
-		
 		<div id="firebaseui-auth-container"></div> 
 	
-	
-
 			<input data-theme="b" type="text" name="plazas" id="plazas" placeholder="Plazas"/>
 
-			<input data-theme="b" name="password" id="password" type="password" value="" autocomplete="off" data-clear-btn="true" placeholder="Password">
-	<a data-role="button" data-transition="flip" id="aceptar" onClick="validar_usuario()" data-icon="check-square-o">Aceptar</a> 
-			
-			
-					 <a id="olvido" onclick="recuperacontrasenna($('#usuario').val())">¿Se te ha olvidado la contraseña?</a> 
-					
+			<input data-theme="b" type="text" name="ocupacion_actual" id="ocupacion_actual" placeholder="Plazas actuales"/>
 	
-
-			
-		
-
 </div>
-
+ -->
 
 		
 </body>
