--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 		<meta http-equiv="Access-Control-Allow-Origin" content="*">
-	<meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline';  media-src *;img-src * 'self' data: https:;" />
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 
 
 	<title>aforo</title>
