--- a/index.html
+++ b/index.html
@@ -57,19 +57,21 @@
 	
 </head>
 
-<body data-theme="b">
+<body>
 
 	<!--INICIO-->
-<!-- <div data-role="page" id="login">
-			<div data-role="content" data-theme="b">
+ <div data-role="page" id="update" visibility="false">
+			<div data-role="content">
 		<div id="firebaseui-auth-container"></div> 
 	
-			<input data-theme="b" type="text" name="plazas" id="plazas" placeholder="Plazas"/>
+			<input  type="text" name="plazas" id="plazas" placeholder="Plazas"/>
 
-			<input data-theme="b" type="text" name="ocupacion_actual" id="ocupacion_actual" placeholder="Plazas actuales"/>
+			<input type="text" name="ocupacion_actual" id="ocupacion_actual" placeholder="Plazas actuales"/>
+			<label id="fecha"></label>
 	
-</div>
- -->
+	</div>
+	</div>
+ 
 
 		
 </body>
