--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
  <div data-role="page" id="update" visibility="false">
 			<div data-role="content">
 		<div id="firebaseui-auth-container"></div> 
-	
-			<input  type="text" name="plazas" id="plazas" placeholder="Plazas"/>
+		<label id="fecha"></label>
+		<label id="plazas">Plazas totales</label>	<input  type="text" name="plazas" id="plazas" placeholder="Plazas"/>
 
-			<input type="text" name="ocupacion_actual" id="ocupacion_actual" placeholder="Plazas actuales"/>
-			<label id="fecha"></label>
+		<label id="plazas">Ocupación actual</label>	<input type="text" name="ocupacion_actual" id="ocupacion_actual" />
+		
 	
 	</div>
 	</div>
