--- a/index.html
+++ b/index.html
@@ -64,11 +64,14 @@
 			<div data-role="content">
 		<div id="firebaseui-auth-container"></div> 
 		<label id="fecha"></label>
-		<label id="plazas">Plazas totales</label>	<input  type="text" name="plazas" id="plazas" placeholder="Plazas"/>
+		<label id="plazas">Plazas totales:</label>	<input  type="text" name="plazas" id="plazas" placeholder="Plazas"/>
 
-		<label id="plazas">Ocupación actual</label>	<input type="text" name="ocupacion_actual" id="ocupacion_actual" />
+		<label id="plazas">Ocupación actual:</label>	<input type="text" name="ocupacion_actual" id="ocupacion_actual" />
 		
-	
+		<label id="cooordenadas">Coordenadas:</label>	<input type="text" name="coordenadas" id="coordenadas" />
+
+
+
 	</div>
 	</div>
  
