--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 		<label id="plazas">Ocupación actual:</label>	<input type="text" name="ocupacion_actual" id="ocupacion_actual" />
 		
-		<label id="cooordenadas">Coordenadas:</label>	<input type="text" name="coordenadas" id="coordenadas" />
+		<label id="coordenadas">Coordenadas:</label>	<input type="text" name="coordenadas" id="coordenadas" />
 
 
 
