--- a/index.html
+++ b/index.html
@@ -64,11 +64,14 @@
 			<div data-role="content">
 		<div id="firebaseui-auth-container"></div> 
 		<label id="fecha"></label>
-		<label id="plazas">Plazas totales:</label>	<input  type="text" name="plazas" id="plazas" placeholder="Plazas" value=""/>
+			<input  type="text" name="nombre" id="nombre" placeholder="nombre" />
+	<input  type="text" name="provincia" id="provincia" placeholder="provincia" />
+			<input  type="text" name="municipio" id="municipio" placeholder="municipio"/>
+			<input  type="text" name="plazas" id="plazas" placeholder="Plazas" />
 
-		<label id="plazas">Ocupación actual:</label>	<input type="text" name="ocupacion_actual" id="ocupacion_actual" value=""/>
+			<input type="text" name="ocupacion_actual" id="ocupacion_actual"  placeholder="ocupacion actual"/>
 		
-		<label id="coordenadas">Coordenadas:</label>	<input type="text" name="coordenadas" id="coordenadas" value=""/>
+			<input type="text" name="coordenadas"  placeholder="coordenadas" id="coordenadas" />
 
 
 
