--- a/index.html
+++ b/index.html
@@ -63,14 +63,12 @@
  <div data-role="page" id="update" visibility="false">
 			<div data-role="content">
 		<div id="firebaseui-auth-container"></div> 
-		<label id="fecha"></label>
+		<label id="fecha">Fecha</label>
 			<input  type="text" name="nombre" id="nombre" placeholder="nombre" />
 	<input  type="text" name="provincia" id="provincia" placeholder="provincia" />
 			<input  type="text" name="municipio" id="municipio" placeholder="municipio"/>
 			<input  type="text" name="plazas" id="plazas" placeholder="Plazas" />
-
-			<input type="text" name="ocupacion_actual" id="ocupacion_actual"  placeholder="ocupacion actual"/>
-		
+			<input type="text" name="ocupacion_actual" id="ocupacion_actual"  placeholder="ocupacion actual"/>		
 			<input type="text" name="coordenadas"  placeholder="coordenadas" id="coordenadas" />
 
 
