--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
 		<meta http-equiv="Access-Control-Allow-Origin" content="*">
 		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
-
+		<meta name=\"viewport\" content=\"width=device-width, user-scalable=yes\" />
 
 	<title>aforo</title>
 
