--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<input  type="text" name="municipio" id="municipio" placeholder="municipio"/>
 			<input  type="text" name="plazas" id="plazas" placeholder="Plazas" />
 			<input type="text" name="ocupacion_actual" id="ocupacion_actual"  placeholder="ocupacion actual"/>		
-			<input type="button" name="buscar" id="buscar" value="buscar" onclick="buscar_coordenadas()">
+			<input type="button" name="buscar" id="buscar" value="buscar" onclick="javascript:buscar_coordenadas()">
 			<input type="text" name="coordenadas"  placeholder="coordenadas" id="coordenadas" />
 
 	</div>
