--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="css/aforo.min.css" />
 
 <link rel="stylesheet" type="text/css" href="css/images/icon-pack-custom.css" />
-	<link rel="stylesheet" type="text/css" href="css/scratch.css" />
+
 
 
 
@@ -23,7 +23,7 @@
 
 	<script src="lib/alertify.min.js"></script>
 
-<script src="js/scratch.js"></script> 
+
 	
 	
 	<!-- Firebase App is always required and must be first -->
@@ -48,11 +48,14 @@
 
  
 
+
+
+
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> 
 
 	<script src="js/aforo.js"></script>
-	<script src="js/scratch.js"></script>
+
 	
 	
 </head>
@@ -69,7 +72,7 @@
 			<input  type="text" name="municipio" id="municipio" placeholder="municipio"/>
 			<input  type="text" name="plazas" id="plazas" placeholder="Plazas" />
 			<input type="text" name="ocupacion_actual" id="ocupacion_actual"  placeholder="ocupacion actual"/>		
-			<input type="button" name="buscar" id="buscar" value="buscar" onclick="javascript:buscar_coordenadas()">
+			<input type="button" name="buscar" id="buscar" value="buscar"/>
 			<input type="text" name="coordenadas"  placeholder="coordenadas" id="coordenadas" />
 
 	</div>
