--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<input  type="text" name="municipio" id="municipio" placeholder="municipio"/>
 			<input  type="text" name="plazas" id="plazas" placeholder="Plazas" />
 			<input type="text" name="ocupacion_actual" id="ocupacion_actual"  placeholder="ocupacion actual"/>		
-			<input type="button" name="buscar" id="buscar" value="buscar"/>
+			<!-- <input type="button" name="buscar" id="buscar" value="buscar"/> -->
 			<input type="text" name="coordenadas"  placeholder="coordenadas" id="coordenadas" />
 
 	</div>
