--- a/mapa.html
+++ b/mapa.html
@@ -203,6 +203,8 @@
 
           actualizo.addEventListener('click', function () {
             fecha_actu.textContent = fechayhora;
+
+            alert("antes"+datos_consult.coordenadas, aforo_total_valor.value, aforo_actual_valor.value);
             actualizar(datos_consult.coordenadas, aforo_total_valor.value, aforo_actual_valor.value);
 
           });
