--- a/mapa.html
+++ b/mapa.html
@@ -72,7 +72,11 @@
 
 
 
-
+      var opt = {
+  enableHighAccuracy: true,
+  timeout: 5000,
+  maximumAge: 0
+};
 
 
 
@@ -95,7 +99,8 @@
       },
       () => {
         handleLocationError(true, infoWindow, map.getCenter());
-      }
+      },opt
+
     );
   } else {
     // Browser doesn't support Geolocation
@@ -103,6 +108,8 @@
   }
 
 //fin geolocation
+
+var options = { enableHighAccuracy: true, maximumAge: 0, timeout: 60000 };
 
 
 
