--- a/SEPE.html
+++ b/SEPE.html
@@ -8,7 +8,7 @@
    <head>	  
      <title>Citas Previas</title>   
      <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-     <base href="https://sede.sepe.gob.es/">
+     <base href="https://sede.sepe.gob.es/citaprevia">
 
 <meta name="description" content="Servicio Público de Empleo Estatal">
 
