--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body>
   <div class="panorama" style="display:block;"> 
-  <iframe src="" id="foo"  >
+  <iframe src="" id="foo" target="_parent" >
 <style>
     .footer iframe{
       display:none;
