--- a/citas.html
+++ b/citas.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="themes/alertify.core.css" />
   <link rel="stylesheet" href="themes/alertify.default.css" id="toggleCSS" />
 
-  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+
   <script src="lib/alertify.min.js"></script>
 
 
@@ -48,7 +48,7 @@
 
 <div data-role="page" id="pageone">
   <div data-role="main" class="ui-content">
-    <h4>Busca tu cita</h>
+    <h4>Cita previa en:</h>
     <form class="ui-filterable">
       <input id="myFilter" data-type="search">
     </form>
