--- a/citas.html
+++ b/citas.html
@@ -54,7 +54,7 @@
     </form>
     <ul data-role="listview" data-filter="true" data-input="#myFilter"  data-inset="true">
  <li><a href="https://www2.agenciatributaria.gob.es/wlpl/TOCP-MUTE/Identificacion"><img src="css/images/logo_agencia.png">
-        <div class="content " style="color: rgb(25, 128, 188);">Agencia Tributaria para tramitar declaracioón de la renta, pago de impuestos,etc..</div>
+        <div class="content " style="color: rgb(25, 128, 188);">Agencia Tributaria para tramitar declaración de la renta, pago de impuestos,etc..</div>
       </a>
       </li>
         <li>
