--- a/citas.html
+++ b/citas.html
@@ -95,7 +95,7 @@
        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Visitas a centros penitenciarios(Todas las Provincias)</p>   </a></li>
      
         <li>
-          <a href="https://sisaex-vac-cita.mscbs.gob.es/sanitarios/consejos/datosViajero/iniciar.doL"><img src="css/images/logo_gob_esp.png"><h6>Vacunación Internacional</h6>
+          <a href="https://sisaex-vac-cita.mscbs.gob.es/sanitarios/consejos/datosViajero/iniciar.do"><img src="css/images/logo_gob_esp.png"><h6>Vacunación Internacional</h6>
        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">(Todas las Provincias)</p>   </a></li>
     </ul>
   </div>
