annado todas citas sanitarias

--- a/citas.html
+++ b/citas.html
@@ -71,7 +71,7 @@
       </li>
         <li>
           <a target="_parent" href="https://w6.seg-social.es/ProsaInternetAnonimo/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=XV106001&ORGANISMO=I"><img width="60px" src="css/images/logo_inss.jpg">
-        <p class="content " style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">  Para tramitar alta y bajas de trabajdores,etc..</p>   </a></li>
+        <p class="content " style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">  Para tramitar alta y bajas de trabajadores,etc..</p>   </a></li>
         <li>
           <a target="_parent" href="https://citaprevia.mjusticia.gob.es"><img width="60px" src="css/images/logo_justicia.jpg"><h6>Ministerio de Justicia</h6>
        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> para certificados de antecedentes, últimas voluntades, información , nacionalidad</p>   </a></li>
@@ -85,7 +85,7 @@
   
         <li>
           <a target="_parent" href="https://www.citaprevia.sanidadmadrid.org/Forms/Acceso.aspx"><img width="60px" src="css/images/logo_salud.png"><h6>Sanidad Madrid</h6>
-       <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> para solicitar citas de Médico,enfermera,corovarivus,gripe etc..</p>   </a></li>
+       <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> para solicitar citas COVID-19, Coronavirus, Médico, Enfermera, vacunación, Pediatra</p>   </a></li>
       <li>
         <a target="_parent" href="https://sede.sepe.gob.es/citaprevia/solicitudCitaPrevia.do"><img width="60px" src="css/images/logo_sepe.png"><h6>Servicio de empleo</h6>
        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> para solicitar empleo, prestaciones por desempleo, etc.. </p>   </a></li>
@@ -93,6 +93,11 @@
           <a target="_parent" href="https://www-s.munimadrid.es/CitaNet/index.jsp"><img width="60px" src="css/images/logo_munimadrid.png"><h6>Ayuntamiento de Madrid</h6>
        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">pago de impuestos, tasas , información, etc</p>   </a></li>
       
+       <li>
+        <a target="_parent" href=  https://administracion.gob.es/pagFront/tramites/fichaTramite.htm?idTramiteSeleccionado=3515&idMateria=46&idBoletin=16#.X5LgsYgzZPZ"><img width="60px" src="css/images/logo_gob_esp.png"><h6>Cita Sanitaria </h6>
+     <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">par solicitar citas COVID-19, Coronavirus, Médico, Enfermera, vacunación, Pediatra (Todas las Provincias)</p>   </a></li>
+
+     
         <li>
           <a target="_parent" href="https://sede.administracionespublicas.gob.es/icpplus/index.html"><img width="60px" src="css/images/logo_gob_esp.png"><h6>Extranjería </h6>
        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">(Todas las Provincias)</p>   </a></li>
