--- a/citas.html
+++ b/citas.html
@@ -89,6 +89,11 @@
       <li>
         <a target="_parent" href="https://sede.sepe.gob.es/citaprevia/solicitudCitaPrevia.do"><img width="60px" src="css/images/logo_sepe.png"><h6>Servicio de empleo</h6>
        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> para solicitar empleo, prestaciones por desempleo, etc.. </p>   </a></li>
+       <li>
+        <a target="_parent" href="https://sedeclave.dgt.gob.es/WEB_NCIT_CONSULTA/solicitarCita.faces"><img width="60px" src="css/images/logo_dgt.jpg"><h6>Dirección General de Tráfico</h6>
+       <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> para solicitar el carnet de conducir, renovación, pago de tasas e impuestos, etc.. </p>   </a></li>
+
+       
         <li>
           <a target="_parent" href="https://www-s.munimadrid.es/CitaNet/index.jsp"><img width="60px" src="css/images/logo_munimadrid.png"><h6>Ayuntamiento de Madrid</h6>
        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">pago de impuestos, tasas , información, etc</p>   </a></li>
