--- a/citas.html
+++ b/citas.html
@@ -56,10 +56,7 @@
 </head>
 <body>
 
-<div data-role="page" id
-
-
-="pageone">
+<div data-role="page" id="pageone">
   <div data-role="main" class="ui-content">
       <form class="ui-filterable">
       <input id="myFilter" data-type="search">
@@ -85,7 +82,7 @@
   
         <li>
           <a target="_parent" href="https://www.citaprevia.sanidadmadrid.org/Forms/Acceso.aspx"><img width="60px" src="css/images/logo_salud.png"><h6>Sanidad Madrid</h6>
-       <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para solicitar citas COVID-19, Coronavirus, Médico, Enfermera, vacunación, Pediatra</p>   </a></li>
+       <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para solicitar citas con el Médico, Enfermera, vacunación, Pediatra</p>   </a></li>
       <li>
         <a target="_parent" href="https://sede.sepe.gob.es/citaprevia/solicitudCitaPrevia.do"><img width="60px" src="css/images/logo_sepe.png"><h6>Servicio de empleo</h6>
        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para solicitar empleo, prestaciones por desempleo, etc.. </p>   </a></li>
@@ -100,7 +97,7 @@
       
        <li>
         <a target="_parent" href="citas_sanitarias.html"><img width="60px" src="css/images/logo_gob_esp.png"><h6>Cita Sanitaria (Todas las Provincias)</h6>
-     <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Para solicitar citas COVID-19, Coronavirus, Médico, Enfermera, vacunación, Pediatra </p>   </a></li>
+     <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Para solicitar citas con el Médico, Enfermera, vacunación, Pediatra </p>   </a></li>
 
      
         <li>
@@ -123,12 +120,15 @@
     </ul>
   </div>
 </div> 
-<div class="panorama" style="display:block;"> 
-  <iframe src="" id="foo" target="_parent" >
-<style>
+
+  <style>
     .footer iframe{
       display:none;
     }
+    .EAT_pie iframe{
+      display:none;
+    }
+    A
     .header iframe{
       display:none;
     }
@@ -144,7 +144,12 @@
     .barrainfo iframe{
       display:none;
     }
+
+
 </style>
+
+  <iframe  id="panorama" name="panorama" >
+
   </iframe>
 </body>
 </html>
