--- a/citas_sanitarias.html
+++ b/citas_sanitarias.html
@@ -125,8 +125,9 @@
     </ul>
   </div>
 </div> 
-<div class="panorama" style="display:block;"> 
-  <iframe src="" id="foo" target="_parent" >
+
+
+  <iframe src="" id="foo"  >
 <style>
     .footer iframe{
       display:none;
