--- a/citas.html
+++ b/citas.html
@@ -26,14 +26,14 @@
 
 
     <link rel="stylesheet" href="themes/alertify.core.css" />
+    <link rel="stylesheet" href="css/cita.css" />
     <link rel="stylesheet" href="themes/alertify.default.css" id="toggleCSS" />
 
 
     <script src="lib/alertify.min.js"></script>
 
-
     <!--script type="text/javascript" src="data.json"></script-->
-    <script src="js/cita.js"></script>
+
 
     <!--script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlkVvmzUIeVr_u2s1URIwq8P_GZ12QwoU"></script-->
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
@@ -42,138 +42,162 @@
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/jquery.mobile-1.4.5.min.js"></script>
     <title>Cita Previa Única</title>
-    <script>
-        $(document).ready(function() {
 
-            $("body").on("focus", "input", function(event) {
-                $(this).attr('autocomplete', 'on')
-            });
-
-        });
-    </script>
-    </script>
 </head>
 
 <body>
 
     <div data-role="page" id="pageone">
-        <div data-role="main" class="ui-content">
-            <form class="ui-filterable">
+
+        <div data-role="main" visible="ui-content">
+            <form visible="ui-filterable">
                 <input id="myFilter" data-type="search">
             </form>
-            <ul data-role="listview" data-filter="true" data-input="#myFilter" data-inset="true">
-                <li>
+
+            <fieldset id="select-1" data-role="controlgroup" data-type="horizontal" data-mini="true">
+
+                <input type="radio" name="elegir" id="favorito" value="favorito">
+                <label for="favorito">Favoritos</label>
+                <input type="radio" name="elegir" id="todos" value="todos" checked>
+                <label for="todos">Todos</label>
+
+            </fieldset>
+
+
+
+            <ul id="theList" data-role="listview" data-filter="true" data-input="#myFilter" data-split-icon="star" data-theme="a" data-split-theme="a" data-inset="true">
+
+                <li id="1">
+
                     <a target="_parent" href="https://imv.seg-social.es/"><img width="60px" src="css/images/imv.png">
                         <h6>Ingreso Mínimo Vital</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para solicitar Ingreso Mínimo Vital IMV, ver el estado de la solicitud del Ingreso mínimo Vital, Aportar documentación al ingreso mínimo vital </p>
                     </a>
+                    <a HREF="#" name="1" id="agregar-favoritos_1"></A>
                 </li>
-                <li>
+                <li id="2">
                     <a target="_parent" href="https://sede.sepe.gob.es/citaprevia/solicitudCitaPrevia.do"><img width="60px" src="css/images/logo_sepe.png">
                         <h6>Cita previa Servicio de empleo</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para solicitar empleo, prestaciones por desempleo, etc.. </p>
                     </a>
+                    <A HREF="#" name="2" id="agregar-favoritos_2"></A>
                 </li>
-                <li>
+                <li id="3">
                     <a target="_parent" href="https://www2.agenciatributaria.gob.es/wlpl/TOCP-MUTE/Identificacion"><img width="60px" width="60px" src="css/images/logo_agencia.png">
                         <h6>Cita previa Agencia Tributaria </h6>
                         <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Para tramitar declaración de la renta, pago de impuestos,etc..</p>
                     </a>
+                    <A name="3" HREF="#" id="agregar-favoritos_3"></A>
                 </li>
-                <li>
+                <li id="4">
                     <a target="_parent" href="https://w6.seg-social.es/ProsaInternetAnonimo/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=XV106001&ORGANISMO=I"><img width="60px" src="css/images/logo_inss.jpg">
                         <h6>Cita previa Instituto Nacional de la Seguridad Social </h6>
-                        <p class="content " style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para tramitar pensiones y prestaciones </p>
+                        <p visible="content " style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para tramitar pensiones y prestaciones </p>
                     </a>
+                    <A mane="4" HREF="#" id="agregar-favoritos_4"></A>
                 </li>
-                <li>
+                <li id="5">
                     <a target="_parent" href="https://citaprevia.mjusticia.gob.es"><img width="60px" src="css/images/logo_justicia.jpg">
                         <h6>Cita previa Ministerio de Justicia</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para Certificado de antecedentes penales, certificados de últimas voluntades, registro general, etc..</p>
                     </a>
+                    <A name="5" HREF="#" id="agregar-favoritos_5"></A>
                 </li>
-                <li>
+                <li id="6">
                     <a target="_parent" href="https://www.citapreviadnie.es/citaPreviaDniExp/InicioDNINIE.action"><img width="60px" src="css/images/logo_cnp.png">
                         <h6>Cita previa Policía Nacional</h6>
 
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para tramitar y renovar DNI, DNIe ,NIE, pasaporte, etc..</p>
                     </a>
+                    <A name="6" HREF="#" id="agregar-favoritos_6"></A>
                 </li>
 
 
-                <li>
+                <li id="7">
                     <a target="_parent" href="https://www.citaprevia.sanidadmadrid.org/Forms/Acceso.aspx"><img width="60px" src="css/images/logo_salud.png">
                         <h6>Cita previa Sanidad Madrid</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para solicitar citas con el Médico, Enfermera, vacunación, Pediatra</p>
                     </a>
+                    <A name="7" HREF="#" id="agregar-favoritos_7"></A>
                 </li>
 
-                <li>
+                <li id="8">
                     <a target="_parent" href="https://sedeclave.dgt.gob.es/WEB_NCIT_CONSULTA/solicitarCita.faces"><img width="60px" src="css/images/logo_dgt.jpg">
                         <h6>Cita previa Dirección General de Tráfico</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para solicitar el carnet de conducir, renovación, pago de tasas e impuestos, etc.. </p>
                     </a>
+                    <A name="8" HREF="#" id="agregar-favoritos_8"></A>
                 </li>
 
 
-                <li>
+                <li id="9">
                     <a target="_parent" href="https://www-s.munimadrid.es/CitaNet/index.jsp"><img width="60px" src="css/images/logo_munimadrid.png">
                         <h6>Cita previa Ayuntamiento de Madrid</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Pago de impuestos, tasas , información, etc..</p>
                     </a>
+                    <A name="9" HREF="#" id="agregar-favoritos_9"></A>
                 </li>
 
-                <li>
+                <li id="10">
                     <a target="_parent" href="citas_sanitarias.html"><img width="60px" src="css/images/logo_gob_esp.png">
                         <h6>Cita Sanitaria (Todas las Provincias)</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Para solicitar citas con el Médico, Enfermera, vacunación, Pediatra, Especialistas </p>
+                        <span visible="ui-li-count">14</span>
                     </a>
+                    <A name="10" HREF="#" id="agregar-favoritos_10"></A>
                 </li>
 
-                <li>
+                <li id="11">
                     <a target="_parent" href="https://www.sanitas.es/misanitas/online/clientes/area-publica/#/"><img width="60px" src="css/images/logo-sanitas.jpg">
                         <h6>Cita previa Sanitaria Sanitas</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para solicitar citas con el Médico, Enfermera, vacunación, Pediatra, Especialistas </p>
                     </a>
+                    <A name="11" HREF="#" id="agregar-favoritos_11"></A>
                 </li>
-                <li>
+                <li id="12">
                     <a target="_parent" href="https://ssweb.seap.minhap.es/icpplus/citar?org=MUFACE"><img width="60px" src="css/images/logo_muface.png">
                         <h6>Cita previa Muface </h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para tramitar citas sanitarias, médicos, etc</p>
                     </a>
+                    <A name="12" HREF="#" id="agregar-favoritos_12"></A>
                 </li>
 
-                <li>
+                <li id="13">
                     <a target="_parent" href="https://sede.administracionespublicas.gob.es/icpplus/index.html"><img width="60px" src="css/images/logo_gob_esp.png">
                         <h6>Cita previa Extranjería (Todas las Provincias)</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Para solicita permiso de Asilo, visado, TIE, certificado de residente, NIE, Toma de huellas, tramites de comisarias, etc..</p>
                     </a>
+                    <A name="13" HREF="#" id="agregar-favoritos_13"></A>
                 </li>
 
-                <li>
+                <li id="14">
                     <a target="_parent" href="https://ssweb.seap.minhap.es/icpplus/citar?org=OIACR"><img width="60px" src="css/images/logo_gob_esp.png">
                         <h6>Cita previa Oficinas de registro (Todas las provincias)</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Para obtener Certificados Digitales, acceso por Cl@ve, Registro de documentación </p>
                     </a>
+                    <A name="14" HREF="#" id="agregar-favoritos_14"></A>
                 </li>
-                <li>
+                <li id="15">
                     <a target="_parent" href="https://sede.administracionespublicas.gob.es/icpplustiej/citar?i=es&org=JUS-RC"><img width="60px" src="css/images/logo_gob_esp.png">
                         <h6>Cita previa Registro Civil (Todas las Provincias)</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Para tramitar Inscripción en el registro civil, matrimonio civil, solicitar certificados, cambio de nombre, inscripción de matrimonios, inscripción de nacimiento, nacionalidad, solicitud libro de familia, etc...</p>
                     </a>
+                    <A name="15" HREF="#" id="agregar-favoritos_15"></A>
                 </li>
-                <li>
+                <li id="16">
                     <a target="_parent" href="https://citaprevia.institucionpenitenciaria.es/cita-previa-publico/"><img width="60px" src="css/images/logo_gob_esp.png">
                         <h6>Cita previa Centros Penitenciarios (Todas las Provincias)</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Visitas a centros penitenciarios</p>
                     </a>
+                    <A name="16" HREF="#" id="agregar-favoritos_16"></A>
                 </li>
 
-                <li>
+                <li id="17">
                     <a target="_parent" href="https://sisaex-vac-cita.mscbs.gob.es/sanitarios/consejos/datosViajero/iniciar.do"><img width="60px" src="css/images/logo_gob_esp.png">
                         <h6>Cita previa Vacunación Internacional (Todas las Provincias)</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cita para vacunarte si viajas al extranjero</p>
                     </a>
+                    <A name="17" HREF="#" id="agregar-favoritos_17"></A>
                 </li>
             </ul>
         </div>
@@ -209,9 +233,109 @@
         }
     </style>
 
+
     <iframe id="panorama" name="panorama">
 
   </iframe>
+    <script>
+        $(document).ready(function() {
+
+            $("body").on("focus", "input", function(event) {
+                $(this).attr('autocomplete', 'on')
+            });
+
+
+
+            $("a[id^='agregar-favoritos']").click(
+                function(e) {
+
+                    // hacemos que no se ejecute el enlace
+                    e.preventDefault();
+
+                    // leemos los datos clave del producto y los guardamos en un objeto
+
+                    var listid = $(this).attr("name");
+
+                    var identi = $(this).attr("id");
+                    identi = identi.substring(identi.indexOf("_") + 1);
+                    var datos = {
+                        id: listid,
+                        nombre: $("#" + identi).attr('visible')
+                    };
+
+                    // leemos los favoritos del localStorage
+                    var favoritos = localStorage.getItem("favoritos") || "[]";
+                    favoritos = JSON.parse(favoritos);
+
+                    // buscamos el producto en la lista de favoritos
+                    var posLista = favoritos.findIndex(function(e) {
+                        return e.id == datos.id;
+                    });
+                    if (posLista > -1) {
+                        alert("lo quitamos");
+                        // si está, lo quitamos
+                        $("#" + identi).attr('visible', "hide");
+                        favoritos.splice(posLista, 1);
+
+                    } else {
+                        // si no está, lo añadimos
+                        alert("lo ponemos");
+                        $("#" + identi).attr('visible', "show");
+                        favoritos.push(datos);
+                    }
+
+                    // guardamos la lista de favoritos 
+                    localStorage.setItem("favoritos", JSON.stringify(favoritos));
+
+                }
+
+
+            );
+
+
+        });
+
+        $('#favorito').click(function(e) {
+            var filtvalue = "show";
+            var favoritos = localStorage.getItem("favoritos") || "[]";
+            favoritos = JSON.parse(favoritos);
+            for (var i = 0; i < 120; i++) {
+                $("#" + i).hide();
+                for (var j = 0; j < favoritos.length; j++) {
+                    //get filter text
+                    var posGeneral = favoritos[j].id;
+
+                    $("#" + posGeneral).show();
+                    $("#theList").attr("data-icon", "star-black");
+                    $("#theList").attr("data-split-icon", "b");
+                    $("#theList").attr("data-theme", "b");
+
+
+                }
+            }
+
+        });
+        $('#todos').click(function(e) {
+            var filtvalue = "hide";
+
+
+            $("#theList").find("li").each(function(idx) {
+                //get filter text
+                var filtText = $(this).attr("visible");
+
+                if (filtText != undefined && filtText == "hide") {
+
+                    $(this).hide();
+                } else {
+                    $(this).show();
+                }
+            });
+        });
+
+
+        // cuando se pulsa en "agregar a favoritos"
+    </script>
+
 </body>
 
 </html>
