--- a/citas.html
+++ b/citas.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta name="fila_viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Firebase App is always required and must be first -->
     <script src="https://www.gstatic.com/firebasejs/5.0.1/firebase-app.js"></script>
@@ -26,7 +26,6 @@
 
 
     <link rel="stylesheet" href="themes/alertify.core.css" />
-    <link rel="stylesheet" href="css/cita.css" />
     <link rel="stylesheet" href="themes/alertify.default.css" id="toggleCSS" />
 
 
